--- a/index 2.html
+++ b/index 2.html
@@ -6,11 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>잘되나요?</h1>
-    <h1>잘되나요?</h1>
-    <h1>잘되나요?</h1>
-    <h1>잘되나요?</h1>
-    <h1>잘되나요?</h1>
+    <h1>잘sdfsdfsdfsdfsdfsdf?</h1>
+    
     <h1>잘되나요?</h1>
   </body>
 </html>
