--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,8 @@
         margin: 15% auto;
         padding: 20px;
         border: 1px solid #888;
-        width: 40%;
+        width: 400px;
+        height: 400px;
       }
     </style>
   </head>
@@ -62,7 +63,6 @@
           onkeydown="handleKeyDown(event)"
         />
         <button onclick="sendMessage()">전송</button>
-        <button onclick="leaveRoom()">나가기</button>
       </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
@@ -113,9 +113,13 @@
         }
       }
       socket.on("update", function (data) {
-        if (data.type === "connect" || data.type === "disconnect") {
+        if (data.type === "connect") {
           const displayName = data.displayName ? `(${data.displayName})` : "";
           const message = `${data.nickname}${displayName} 님이 접속하셨습니다.`;
+          appendMessage(message);
+        } else if (data.type === "disconnect") {
+          const displayName = data.displayName ? `(${data.displayName})` : "";
+          const message = `${data.nickname}${displayName} 님이 나가셨습니다.`;
           appendMessage(message);
         } else if (data.type === "message") {
           const displayName = data.displayName ? `(${data.displayName})` : "";
@@ -179,12 +183,16 @@
       function leaveRoom() {
         const nickname = user.nickname || "익명";
         const displayName = user.displayName ? `(${user.displayName})` : "";
-        const message = `${nickname}${displayName} 님이 나가셨습니다.`; // Updated message
+        const message = `${nickname}${displayName} 님이 나가셨습니다.`;
 
         appendMessage(message);
-        socket.disconnect();
+        socket.disconnect(); // 클라이언트 측에서 disconnect() 함수를 호출하여 연결 종료
 
-        // Rest of the code...
+        // UI 초기화
+        document.getElementById("chat").innerHTML = "";
+        document.getElementById("chat").style.display = "none";
+        document.getElementById("messageInputArea").style.display = "none";
+        document.getElementById("loginModal").style.display = "block";
       }
     </script>
   </body>
