--- a/static/index.html
+++ b/static/index.html
@@ -4,32 +4,13 @@
     <meta charset="utf-8" />
     <title>채팅</title>
     <link rel="stylesheet" href="/css/index.css" />
-    <style>
-      /* 모달 스타일 */
-      .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.4); 
-      }
-
-      .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 400px;
-        height: 400px;
-         
-      }
+    <style>  
     </style>
   </head>
   <body>
+    <div id="header">
+        <h2 id="main title">★민지의 채팅방★</h2>
+    </div>
     <div id="main">
       <div id="loginModal" class="modal">
         <div class="modal-content">
@@ -56,13 +37,14 @@
       <div id="chat" style="display: none">
         <!-- 채팅 메시지 영역 -->
       </div>
-      <div id="messageInputArea" style="display: none">
+      <div id="messageInputArea">
         <input
           type="text"
           id="messageInput"
           placeholder="메시지를 입력해주세요.."
           onkeydown="handleKeyDown(event)"
         />
+        <br />
         <button onclick="sendMessage()">전송</button>
         <button onclick="leaveRoom()">나가기</button>
       </div>
